Top Ranking modification and check

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -599,6 +599,9 @@
     "Make This Default": "Make This Default",
     "Makeup Highlighter Illuminator Contouring Makeup Face Brightener": "",
     "Mall category": "Mall category",
+    "Man sub category": "",
+    "Man sub category1": "",
+    "Man sub category2": "",
     "Manage & organize your shop": "",
     "Manage Products": "Manage Products",
     "Manage Profile": "",
@@ -609,7 +612,7 @@
     "Max 3 published": "Max 3 published",
     "Men Clothing  Fashion": "Men Clothing  Fashion",
     "Men Clothing & Fashion": "Men Clothing & Fashion",
-    "Men`s Fashion": "Men`s Fashion",
+    "Men`s Fashion": "",
     "Menu": "",
     "Message": "",
     "Message Seller": "",
@@ -1094,6 +1097,7 @@
     "Subtotal": "",
     "Successful orders": "",
     "Summary": "",
+    "Summer Strickland": "",
     "Sumsung": "Sumsung",
     "Support Desk": "",
     "Support Policy": "",
@@ -1103,6 +1107,7 @@
     "Symbol Format": "",
     "System Default Currency": "",
     "SzADP": "SzADP",
+    "T Strickland": "",
     "TJ Box": "TJ Box",
     "TOTAL": "",
     "TOTAL SHIPPING": "",
@@ -1364,12 +1369,15 @@
     "pickup point": "",
     "reviews": "",
     "setting": "",
-    "tanda o3 km outdoor CPE": "",
+    "shose": "shose",
     "test": "",
     "test 43": "test 43",
     "test 5": "test 5",
     "test n3": "test n3",
     "to": "",
+    "tupi": "",
+    "tupi1": "",
+    "tupi2": "",
     "updated successfully": "",
     "you ordered": "",
     "404": "",
