--- a/resources/lang/bd.json
+++ b/resources/lang/bd.json
@@ -4,6 +4,7 @@
     "D-link media Converter": "",
     "Electronic Accessories": "",
     "Electronic Devices": "",
+    "Fusion FL-118 Splicer": "",
     "Gi pipr": "Gi pipr",
     "IP security Camera": "",
     "JILONG KL-280G": "",
