--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -442,6 +442,7 @@
     "Full Address": "Full Address",
     "Full Name": "Full Name",
     "Fusion": "Fusion",
+    "Fusion FL-118 Splicer": "",
     "Gallery Images": "Gallery Images",
     "General": "",
     "General Settings": "",
