seller design change

--- a/resources/lang/bd.json
+++ b/resources/lang/bd.json
@@ -33,6 +33,7 @@
     "Xiaomi MI 4C R4CM 300 Mbps 4 Antenna Router (Global Version)": "",
     "oppo Phones": "",
     "optical fiber": "",
+    "seller test product": "seller test product",
     "shaloar Kameez": "",
     "shose": "shose",
     "test": "",
