--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1322,6 +1322,7 @@
     "You don't have enough balance to send withdraw request": "",
     "You have subscribed successfully": "",
     "You have successfully completed the updating process. Please Login to continue": "You have successfully completed the updating process. Please Login to continue",
+    "You have to add minimum 1 products!": "You have to add minimum 1 products!",
     "You have to add minimum 100 products!": "You have to add minimum 100 products!",
     "You have to add minimum 5 products!": "You have to add minimum 5 products!",
     "You need to agree with our policies": "You need to agree with our policies",
