design and development change

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1236,7 +1236,7 @@
     "Unit price": "",
     "Unpaid": "",
     "Unstitched Cotton Block Printed Salwar Kameez - Wo": "Unstitched Cotton Block Printed Salwar Kameez - Wo",
-    "Unstitched Cotton Block Printed Salwar Kameez - Women Clothing": "Unstitched Cotton Block Printed Salwar Kameez - Women Clothing",
+    "Unstitched Cotton Block Printed Salwar Kameez - Women Clothing": "",
     "Upadte Advertise Image": "Upadte Advertise Image",
     "Upadte Advertise Image Information": "Upadte Advertise Image Information",
     "Update": "Update",
