--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -476,6 +476,7 @@
     "HP Spectre x360 13-AE517TU 8th Gen Intel Core i7 8550U": "HP Spectre x360 13-AE517TU 8th Gen Intel Core i7 8550U",
     "HR": "",
     "HTTPS Activation": "HTTPS Activation",
+    "Have coupon code  Enter here": "Have coupon code  Enter here",
     "Have coupon code? Enter here": "",
     "Headphones & Headset": "Headphones & Headset",
     "Hi. A new order has been placed. Please check the attached invoice.": "Hi. A new order has been placed. Please check the attached invoice.",
