--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -356,6 +356,7 @@
     "Description": "",
     "Desktops": "Desktops",
     "Destroy": "",
+    "Details": "Details",
     "Dig prod 1": "Dig prod 1",
     "Digcat1": "Digcat1",
     "Digi IMG": "Digi IMG",
@@ -526,6 +527,7 @@
     "Install": "Install",
     "Install New Addon": "Install New Addon",
     "Installed Addon": "Installed Addon",
+    "Instamojo": "Instamojo",
     "Instamojo Credential": "Instamojo Credential",
     "Instamojo Payment Activation": "Instamojo Payment Activation",
     "Instamojo Sandbox Mode": "Instamojo Sandbox Mode",
@@ -761,6 +763,7 @@
     "Pay to seller": "",
     "Pay with wallet": "",
     "PayPal": "",
+    "PayStack": "PayStack",
     "PayStack Activation": "PayStack Activation",
     "PayStack Credential": "PayStack Credential",
     "Payhere": "Payhere",
@@ -819,6 +822,7 @@
     "Postal Code": "",
     "Postal code": "",
     "Power Bank": "Power Bank",
+    "Premium Packages for Customers": "Premium Packages for Customers",
     "Price": "",
     "Price high to low": "",
     "Price low to high": "",
@@ -864,6 +868,7 @@
     "Published": "",
     "Purchase History": "",
     "Purchase Price": "",
+    "Purchase Your Package": "Purchase Your Package",
     "Purchase price": "",
     "Purchased Package": "Purchased Package",
     "Qty": "",
@@ -878,6 +883,7 @@
     "Rating (High   Low)": "Rating (High   Low)",
     "Rating (Low   High)": "Rating (Low   High)",
     "Razor Pay Activation": "Razor Pay Activation",
+    "RazorPay": "RazorPay",
     "RazorPay Credential": "RazorPay Credential",
     "Reason": "",
     "Receiver": "",
@@ -947,6 +953,7 @@
     "Search products": "",
     "Security Camera": "Security Camera",
     "See All": "",
+    "See ticket": "See ticket",
     "Select": "",
     "Select  sendmail  for Mail Driver if you face any issue after configuring  smtp  as Mail Driver": "Select  sendmail  for Mail Driver if you face any issue after configuring  smtp  as Mail Driver",
     "Select  sendmail  for Mail Driver if you face any issue after configuring  smtp  as Mail Driver ": "Select  sendmail  for Mail Driver if you face any issue after configuring  smtp  as Mail Driver ",
@@ -997,6 +1004,7 @@
     "Send A Withdraw Request": "Send A Withdraw Request",
     "Send Newsletter": "",
     "Send Password Reset Link": "",
+    "Send Reply": "Send Reply",
     "Send Ticket": "",
     "Send Withdraw Request": "",
     "Send Your Ticket": "",
@@ -1160,6 +1168,7 @@
     "This item is out of stock!": "",
     "This site is under developement. We will be back soon!!": "",
     "Thumbnail Image": "",
+    "Ticket": "Ticket",
     "Ticket ID": "Ticket ID",
     "Times": "Times",
     "Title": "",
@@ -1297,6 +1306,7 @@
     "VoguePay Activation": "",
     "VoguePay Credential": "",
     "VoguePay Merchant Key": "",
+    "Voguepay": "Voguepay",
     "Vsol": "Vsol",
     "Wallet Balance": "",
     "Wallet System Activation": "",
