navbar zindex decrease

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1335,6 +1335,7 @@
     "You have successfully completed the updating process. Please Login to continue": "You have successfully completed the updating process. Please Login to continue",
     "You have to add minimum 1 products!": "You have to add minimum 1 products!",
     "You have to add minimum 100 products!": "You have to add minimum 100 products!",
+    "You have to add minimum 23 products!": "You have to add minimum 23 products!",
     "You have to add minimum 5 products!": "You have to add minimum 5 products!",
     "You need to agree with our policies": "You need to agree with our policies",
     "You need to configure Facebook Client correctly to enable this feature": "You need to configure Facebook Client correctly to enable this feature",
