Deals by category top rankings

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -391,7 +391,7 @@
     "Edit Page": "Edit Page",
     "Edit Product": "",
     "Elastic V Neck Men T Shirt Mens Fashion Short Sleeve Tshirt Fitness Casual Male T-shirt": "Elastic V Neck Men T Shirt Mens Fashion Short Sleeve Tshirt Fitness Casual Male T-shirt",
-    "Electronic Accessories": "Electronic Accessories",
+    "Electronic Accessories": "",
     "Electronic Devices": "",
     "Email": "",
     "Email Address": "",
@@ -732,7 +732,7 @@
     "Order placed": "",
     "Order status": "",
     "Orders": "",
-    "Others Devises & access": "Others Devises & access",
+    "Others Devises & access": "",
     "Out Of Stock": "",
     "Out of Stock": "Out of Stock",
     "Out of stock": "",
@@ -1145,7 +1145,7 @@
     "TOTAL SHIPPING": "",
     "TP LInk": "TP LInk",
     "TP link  8 port  Switch": "",
-    "TV & Home Appliances": "TV & Home Appliances",
+    "TV & Home Appliances": "",
     "TV & TV Accessories": "TV & TV Accessories",
     "Tablets": "Tablets",
     "Tags": "",
@@ -1318,7 +1318,7 @@
     "Withdraw Request history": "",
     "Women Clothing  Fashion": "Women Clothing  Fashion",
     "Women Clothing & Fashion": "",
-    "Women`s Fashion": "Women`s Fashion",
+    "Women`s Fashion": "",
     "Write a review": "",
     "X-tech": "X-tech",
     "Xiaomi MI 4C R4CM 300 Mbps 4 Antenna Router (Global Version)": "",
