--- a/resources/lang/bd.json
+++ b/resources/lang/bd.json
@@ -2,6 +2,7 @@
     "All-in-one": "",
     "Altai C1n Outdoor Super WiFi Long Range Wireless AP": "",
     "D-link media Converter": "",
+    "Eden Collier": "Eden Collier",
     "Electronic Accessories": "",
     "Electronic Devices": "",
     "Fusion FL-118 Splicer": "",
