--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -387,6 +387,7 @@
     "E-commerse setup": "",
     "Earning Points": "Earning Points",
     "Earnings": "",
+    "Eden Collier": "Eden Collier",
     "Edit": "",
     "Edit Page": "Edit Page",
     "Edit Product": "",
