--- a/resources/lang/bd.json
+++ b/resources/lang/bd.json
@@ -18,8 +18,10 @@
     "Mobiles": "",
     "N301 tenda 2 abtina Router": "N301 tenda 2 abtina Router",
     "Networking & Network Equipment and cable": "",
+    "Odysseus Mills": "",
     "Others Devises & access": "",
     "Security Camera": "",
+    "Sonya Duke": "",
     "Summer Strickland": "",
     "Sumsung": "",
     "T Strickland": "",
