--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -25,6 +25,7 @@
     "A fresh verification link has been sent to your email address.": "",
     "API KEY": "API KEY",
     "AUTH TOKEN": "AUTH TOKEN",
+    "Abdul Roberts": "Abdul Roberts",
     "About": "About",
     "Accept": "",
     "Accessories": "Accessories",
@@ -172,6 +173,7 @@
     "Brand has been inserted successfully": "",
     "Brand has been updated successfully": "",
     "Brands": "",
+    "Buckminster Hancock": "Buckminster Hancock",
     "Bulk Export": "Bulk Export",
     "Bulk Import": "Bulk Import",
     "Bulk Products upload": "",
@@ -546,6 +548,7 @@
     "JILONG KL-280G Fiber Splicer Machine with 5.7  Color LCD": "JILONG KL-280G Fiber Splicer Machine with 5.7  Color LCD",
     "Jamuna fashion": "Jamuna fashion",
     "Jewelry  Watches": "Jewelry  Watches",
+    "Jolie Contreras": "Jolie Contreras",
     "KN 95 Protective Mask": "KN 95 Protective Mask",
     "KN 95 USA Quality": "KN 95 USA Quality",
     "Kay Acevedo": "Kay Acevedo",
@@ -611,6 +614,7 @@
     "Main Images": "",
     "Maintenance Mode": "",
     "Maintenance Mode Activation": "",
+    "Maisie Pratt": "Maisie Pratt",
     "Make Payment": "Make Payment",
     "Make This Default": "Make This Default",
     "Makeup Highlighter Illuminator Contouring Makeup Face Brightener": "",
@@ -700,6 +704,7 @@
     "OOPS!": "OOPS!",
     "OTG": "OTG",
     "OTP will be Used For": "",
+    "Odysseus Mills": "",
     "Of seller product price will be deducted from seller earnings": "Of seller product price will be deducted from seller earnings",
     "Offline Payment System": "",
     "Offline Recharge Wallet": "Offline Recharge Wallet",
@@ -1069,6 +1074,7 @@
     "Sold by": "",
     "Something went wrong": "",
     "Something went wrong. Looks like server failed to load your request.": "Something went wrong. Looks like server failed to load your request.",
+    "Sonya Duke": "",
     "Sorry  but the page you are looking for has not been found on our server.": "Sorry  but the page you are looking for has not been found on our server.",
     "Sorry but the page you are looking for has not been found on our server": "Sorry but the page you are looking for has not been found on our server",
     "Sorry! Password did not match.": "",
@@ -1173,6 +1179,7 @@
     "Ticket": "Ticket",
     "Ticket ID": "Ticket ID",
     "Times": "Times",
+    "Timothy Ballard": "Timothy Ballard",
     "Title": "",
     "Tl-WR850N 2 antina white": "Tl-WR850N 2 antina white",
     "To": "To",
