--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -758,6 +758,7 @@
     "Paid": "",
     "Paid Status Changing Time": "",
     "Password": "",
+    "Paste your link and get your product...": "Paste your link and get your product...",
     "Patrick Forbes": "",
     "Pay": "",
     "Pay Now": "",
