Dora Mall, Grocery added

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -475,6 +475,7 @@
     "Google reCAPTCHA": "Google reCAPTCHA",
     "Google reCAPTCHA Setting": "Google reCAPTCHA Setting",
     "Grand Total": "Grand Total",
+    "Grocery": "Grocery",
     "Guest Checkout": "",
     "Guest Checkout Activation": "Guest Checkout Activation",
     "HP Spectre x360 13-AE517TU 8th Gen Intel Core i7 8550U": "HP Spectre x360 13-AE517TU 8th Gen Intel Core i7 8550U",
@@ -1417,6 +1418,8 @@
     "seller test product": "seller test product",
     "setting": "",
     "shose": "shose",
+    "sub grocery": "sub grocery",
+    "sub sub grocery": "sub sub grocery",
     "test": "",
     "test 43": "test 43",
     "test 5": "test 5",
