--- a/resources/lang/bd.json
+++ b/resources/lang/bd.json
@@ -20,6 +20,7 @@
     "Networking & Network Equipment and cable": "",
     "Odysseus Mills": "",
     "Others Devises & access": "",
+    "Samson Gonzales": "Samson Gonzales",
     "Security Camera": "",
     "Sonya Duke": "",
     "Summer Strickland": "",
