--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -103,6 +103,7 @@
     "Altai": "Altai",
     "Altai C1n Outdoor Super WiFi Long Range Wireless AP": "",
     "Amount": "",
+    "Anika Garner": "Anika Garner",
     "Any query about this product": "Any query about this product",
     "App ID": "App ID",
     "App Secret": "App Secret",
@@ -410,6 +411,7 @@
     "Enter your email address and new password and confirm password.": "",
     "Enter your email address to recover your password.": "",
     "Entry Type": "",
+    "Erasmus Madden": "Erasmus Madden",
     "Exchange rate": "",
     "Expiration Month": "",
     "Expiration Year": "",
@@ -950,6 +952,7 @@
     "STRIPE SECRET": "STRIPE SECRET",
     "Sale": "",
     "Sales": "Sales",
+    "Samson Gonzales": "Samson Gonzales",
     "Sandbox Mode": "Sandbox Mode",
     "Saree": "Saree",
     "Save": "",
